[BACKLOG-11651] Remove extra scrollbar (#3182)

--- a/user-console/source/org/pentaho/mantle/public/themes/sapphire/mantleSapphire.css
+++ b/user-console/source/org/pentaho/mantle/public/themes/sapphire/mantleSapphire.css
@@ -1419,6 +1419,7 @@ a:active, a:hover {
 
 .users-roles-list {
   height: 100%;
+  overflow: hidden;
 }
 
 .pentaho-tab-panel, #userRolesAdminPanel .pentaho-tab-panel {
